--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="centered__main_page">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
             <input id="new-task" class="task" type="text">
